fix: package publisher

--- a/vscode-extension/pdf-ppt-mcp-explorer/package.json
+++ b/vscode-extension/pdf-ppt-mcp-explorer/package.json
@@ -3,6 +3,7 @@
   "displayName": "PDF/PPT MCP Explorer",
   "description": "Visual explorer and AI config wrapper for pdf-ppt-mcp",
   "version": "0.0.1",
+  "publisher": "Abdoalatrash",
   "engines": {
     "vscode": "^1.109.0"
   },
